force-app/main/default/objects/Printing_Press__c/Printing_Press__c.object-meta.xml
<CustomObject>
    <label>Printing Press</label>
    <nameField>
        <label>Publisher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printing Presses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>