force-app/main/default/objects/Printing_Press__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Max limit of printing jobs</description>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>