force-app/main/default/objects/Printing_Press__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact information to the Printing press</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Printing Presses</relationshipLabel>
    <relationshipName>Printing_Presses</relationshipName>
    <type>Lookup</type>
</CustomField>